--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "react-native-zendesk",
   "version": "2.1.0",
   "description": "Zendesk SDK for React Native.",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "index.js",
   "scripts": {
     "build": "rimraf lib && tsc",
     "lint": "eslint \"src/**/*.ts\"",
@@ -20,10 +19,10 @@
     "android/**/*",
     "*.podspec"
   ],
-  "homepage": "https://github.com/dcvz/react-native-zendesk#readme",
+  "homepage": "https://github.com/jlexyc/react-native-zendesk#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dcvz/react-native-zendesk.git"
+    "url": "git+https://github.com/jlexyc/react-native-zendesk.git"
   },
   "keywords": [
     "zendesk",
@@ -37,7 +36,7 @@
   "author": "dcvz",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/dcvz/react-native-zendesk/issues"
+    "url": "https://github.com/jlexyc/react-native-zendesk/issues"
   },
   "devDependencies": {
     "@types/react-native": "^0.60.0",
