Fixed one more issue

--- a/package.json
+++ b/package.json
@@ -23,15 +23,13 @@
     "android",
     "support"
   ],
-  "author": "dcvz",
+  "author": "dcvz & jlexyc",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/jlexyc/react-native-zendesk/issues"
   },
   "devDependencies": {
     "@types/react-native": "^0.60.0",
-    "@typescript-eslint/eslint-plugin": "^1.7.0",
-    "@typescript-eslint/parser": "^1.7.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.1",
